[tool.poetry]
name = "mvp-sqlalchemy-and-alembic"
version = "0.1.0"
description = ""
authors = ["Thiago Serra <thiagosaldanhaserra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
